# barcode_detect

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bk  Cargo.toml  build.rs  detect.cpp
.cargo/: config.toml
examples/: main.rs
model/: scanner.ncnn.param  scannetv2_640.ncnn.param  scannetv2_nano.ncnn.param
src/: lib.rs
