[package]
name = "qbarcode_scanner"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"]
path = "src/lib.rs"

[dev-dependencies]
image = "0.25.6"

[build-dependencies]
cc = "1"
cmake = "0.1"
bindgen = "0.72"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["serde_derive"] }
zxing-cpp = { path = "/private/tmp/zxing-cpp/wrappers/rust", features = [
    "bundled",
] }

[profile.release]
lto = true
opt-level = 'z'

[[example]]
name = "run_test"
path = "examples/main.rs"
